--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "githd",
     "displayName": "Git History Diff",
     "description": "View git history. View diff of committed files. View git blame info. View stash details.",
-    "version": "3.0.2",
+    "version": "3.0.3",
     "publisher": "huizhou",
     "author": {
         "name": "Hui Zhou",
@@ -74,6 +74,11 @@
                     "type": "boolean",
                     "default": true,
                     "description": "Display the express mode setting on the status bar"
+                },
+                "githd.logView.hideMerges": {
+                    "type": "boolean",
+                    "default": false,
+                    "description": "Hide merge commits in the history view"
                 },
                 "githd.blameView.enabled": {
                     "type": "boolean",
